Transfer configuration from CamDSAC to PoseDSAC.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,16 +11,20 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                "--camdsac_only",
-                //"--layers", "700", "500", "300", "300", "100",
-                "--layers", "200", "300", "200",
+                "--posedsac_only",
+
+                "--layers_camdsac", "200", "300", "200",
+
                 "--temp", "1.5",
                 "--gumbel",
-                "--entropy_beta", ".01",
+                "--entropy_beta_cam", ".01",
                 "--entropy_to_scores",
                 "-lr", "0.00001",
-                //"-lr", "0.0001",
-                "-lrs", "100"
+                "-lrs", "100",
+
+                "--pose_hypotheses", "20",
+                "--layers_posedsac", "700", "500", "300", "300", "100",
+                "--entropy_beta_pose", "1."
             ]
         }
     ]
