--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,15 +25,18 @@
                 "--temp_gamma", "0.9",
 
                 "--train_iterations", "10",
-                "--valid_iterations", "10",
+                "--valid_iterations", "0",
 
-                "--pose_hypotheses", "20",
+                "--pose_hypotheses", "100",
                 "--layers_posedsac", "1000", "900", "900", "900", "900", "700", 
                 //"--layers_posedsac", "200", "300", "200",
                 "--entropy_beta_pose", "1.",
                 "--body_lengths_mode", "1",
                 "--pose_batch_size", "16",
                 //"--weighted_selection"
+
+                "--test",
+                "--filter_bad",
             ]
         }
     ]
