--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,9 @@
                 "--posedsac_only",
                 //"--camdsac_only",
 
+                "--dataset", "cmu-panoptic",
+                "--cam_idxs", "1", "2", "3", "4", "6", "7", "10", "12", "16", "18", "19", "22", "23", "30",
+
                 "--layers_camdsac", "700", "500", "300", "300",
 
                 "--temp", "1.8",
