Learn PoseDSAC on CMU Panoptic.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,9 @@
                 "--dataset", "cmu-panoptic",
                 "--cam_idxs", "1", "2", "3", "4", "6", "7", "10", "12", "16", "18", "19", "22", "23", "30",
 
+                //"--dataset", "human36m",
+                //"--cam_idxs", "0", "1", "2", "3",
+
                 "--layers_camdsac", "700", "500", "300", "300",
 
                 "--temp", "1.8",
