Support any number of CMU views.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,9 @@
                 //"--camdsac_only",
 
                 "--dataset", "cmu-panoptic",
-                "--cam_idxs", "1", "2", "3", "4", "6", "7", "10", "12", "16", "18", "19", "22", "23", "30",
+                "--cam_idxs", "1", "2", "3", "4", "6", "7", //"10", "12", "16", "18", "19", "22", "23", "30",
+
+                "--transfer",
 
                 //"--dataset", "human36m",
                 //"--cam_idxs", "0", "1", "2", "3",
