--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,9 +15,10 @@
                 //"--camdsac_only",
 
                 "--dataset", "cmu-panoptic",
-                "--cam_idxs", "1", "2", "3", "4", "6", "7", //"10", "12", "16", "18", "19", "22", "23", "30",
+                //"--cam_idxs", "1", "2", "3", "4", "6", "7", //"10", "12", "16", "18", "19", "22", "23", "30",
+                "--cam_idxs", "0", "5", "8", "9", "10", "11", //"10", "12", "16", "18", "19", "22", "23", "30",
 
-                "--transfer",
+                "--transfer_mode", "2", "1",
 
                 //"--dataset", "human36m",
                 //"--cam_idxs", "0", "1", "2", "3",
@@ -33,8 +34,8 @@
                 "-ts", "5",
                 "--temp_gamma", "0.9",
 
-                "--train_iterations", "10",
-                "--valid_iterations", "5",
+                "--train_iterations", "1",
+                "--valid_iterations", "1",
 
                 "--pose_hypotheses", "200",
                 "--layers_posedsac", "1000", "900", "900", "900", "900", "700", 
