--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,11 +14,11 @@
                 "--posedsac_only",
                 //"--camdsac_only",
 
-                "--dataset", "cmu-panoptic",
+                "--transfer_mode", "2", "1",
+
+                //"--dataset", "cmu",
                 //"--cam_idxs", "1", "2", "3", "4", "6", "7", //"10", "12", "16", "18", "19", "22", "23", "30",
                 "--cam_idxs", "0", "5", "8", "9", "10", "11", //"10", "12", "16", "18", "19", "22", "23", "30",
-
-                "--transfer_mode", "2", "1",
 
                 //"--dataset", "human36m",
                 //"--cam_idxs", "0", "1", "2", "3",
