--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,14 +14,14 @@
                 "--posedsac_only",
                 //"--camdsac_only",
 
-                "--transfer_mode", "2", "1",
+                "--transfer", "0",
 
                 //"--dataset", "cmu",
                 //"--cam_idxs", "1", "2", "3", "4", "6", "7", //"10", "12", "16", "18", "19", "22", "23", "30",
-                "--cam_idxs", "0", "5", "8", "9", "10", "11", //"10", "12", "16", "18", "19", "22", "23", "30",
+                //"--cam_idxs", "0", "5", "8", "9", "10", "11", //"10", "12", "16", "18", "19", "22", "23", "30",
 
                 //"--dataset", "human36m",
-                //"--cam_idxs", "0", "1", "2", "3",
+                "--cam_idxs", "0", "1", "2", "3",       // now used only for CamDSAC
 
                 "--layers_camdsac", "700", "500", "300", "300",
 
@@ -34,8 +34,9 @@
                 "-ts", "5",
                 "--temp_gamma", "0.9",
 
-                "--train_iterations", "1",
-                "--valid_iterations", "1",
+                "--train_iterations", "10",
+                "--valid_iterations", "5",
+                "--test_iterations", "40",
 
                 "--pose_hypotheses", "200",
                 "--layers_posedsac", "1000", "900", "900", "900", "900", "700", 
