--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
                 "--posedsac_only",
                 //"--camdsac_only",
 
-                "--transfer", "0",
+                "--transfer", "2",
 
                 //"--dataset", "cmu",
                 //"--cam_idxs", "1", "2", "3", "4", "6", "7", //"10", "12", "16", "18", "19", "22", "23", "30",
@@ -43,6 +43,7 @@
                 //"--layers_posedsac", "200", "300", "200",
                 "--entropy_beta_pose", "0.01",
                 "--weighted_beta", "0.02",
+                "--exp_beta", "1.",
                 "--body_lengths_mode", "1",
                 "--pose_batch_size", "16",
                 //"--weighted_selection"
