Update .gitignore and .dockerignore.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,14 @@
-./data/
-./logs/
-./models/
-./results/
+__pycache__/
+.vscode/
+
+data/
+logs/
+models/
+results/
+pretrained/
+cmu/
+vis/
+
+*.pdf
+**.npy
+*.zip
